# This file is a part of marzer/spin_mutex and is subject to the the terms of the MIT license.
# Copyright (c) Mark Gillard <mark.gillard@outlook.com.au>
# See https://github.com/marzer/spin_mutex/blob/master/LICENSE for the full license text.
# SPDX-License-Identifier: MIT

include_dir = include_directories('.')

if not meson.is_subproject()
	install_subdir('mz', install_dir: get_option('includedir'))
endif
